bzr-svn 0.5.4					UNRELEASED

  BUG FIXES

   * Ignore spurious commits setting tags to the same revision. (#342824)

   * Fix compatibility with Python2.4.

   * Improve error message if subvertpy can't be found. (#345067)

   * Cope with spaces in branch paths. (#348439)

bzr-svn 0.5.3                   2009-03-10

  BUG FIXES

   * Lazily load commands during help. (#330928)

   * Fix one-line helps for dpush / foreign-mapping-upgrade. (#331051)

   * Skip unicode tests if the local file system doesn't support unicode 
     paths.

   * Don't print traceback when connection errors occur during push. (#331078)

   * Fix exception importing with itrunk* layout.

   * Break subversion locks in ``bzr break-lock''.

   * Handle corner case following branch paths outside of prefixes in 
     revision metadata browser.

   * Handle strange corner case in HTTP, where get_dir() works on files and we 
     accidently start to call update() on files.

   * Don't check branch root when looking for round-tripped revisions that used 
     revision properties. (#294784)

   * Support non-ascii characters in home directories. (#333121)

   * Fix recognizing tags when using wildcard layouts. (#333960)

   * Fetch left-hand side ancestry if it's outside of the prefix in
     svn-import. (#334692)

   * Support pushing kind changes from directory to file. (#335445)

   * Fixed canonicalization issue when retrieving remote revision trees
     over HTTP.

   * Fix recognition of v3 mappings pushed with incomplete revision properties.

   * Print proper error when a part of the repository is inaccessible during 
     fetch. (#323084)

   * Fix concurrent access problems during push/commit. (#248289)

   * Allow svn: revision specifier in non-svn branches. (#337295)

   * Cope with v3 and v4 mappings being interwined in a mainline 
     with roundtripped revisions. (#332364)

   * Print proper error when it is impossible to get a branch path 
     in a particular layout. (#340081)
