@@ -10,6 +10,9 @@ bzr-svn 0.5.4					UNRELEASED
 
    * Cope with spaces in branch paths. (#348439)
 
+   * Properly deal with pointless commits when branching the 
+     repository root. (#348786)
+
 bzr-svn 0.5.3                   2009-03-10
 
   BUG FIXES
